appId: ${APP_ID}
name: Full History Tabs
---
- runFlow:
    file: ../launch.yml
    env:
      LINK: full-history-tabs
      TEXT: 'Tab First (-)'
- tapOn:
    text: 'Navigate to Second'
- assertVisible:
    text: 'Tab Second (1)'
- tapOn:
    text: 'Navigate to First'
- assertVisible:
    text: 'Tab First (2)'
- tapOn:
    text: 'Navigate to Third'
- assertVisible:
    text: 'Tab Third (3)'
- tapOn:
    text: 'Navigate to Second'
- assertVisible:
    text: 'Tab Second (4)'
- tapOn:
    id: 'first-tab'
- assertVisible:
    text: 'Tab First (2)'
- tapOn:
    text: 'Go back'
- assertVisible:
    text: 'Tab Second (4)'
- tapOn:
    text: 'Go back'
- assertVisible:
    text: 'Tab Third (3)'
- tapOn:
    text: 'Go back'
- assertVisible:
    text: 'Tab First (2)'
- tapOn:
    text: 'Go back'
- assertVisible:
    text: 'Tab Second (1)'
- tapOn:
    text: 'Go back'
